@@ -1,2 +1,2 @@
-sr aur mawk
+aur mawk
 AWK Programming Language
