@@ -1,2 +1,2 @@
-sr bing surfraw
+bing surfraw
 a fast unix command line
