@@ -1,2 +1,2 @@
-sr cliki sbcl
+cliki sbcl
 \d+ results found, showing results \d+
