@@ -1,2 +1,2 @@
-sr genportage surfraw
+genportage surfraw
 www-client/surfraw
