@@ -1,2 +1,2 @@
-sr google foo
+google foo
 Results .* of about .* for
