@@ -1,2 +1,2 @@
-sr lsm surfraw
+lsm surfraw
 lsmbyid\.cgi.*surfraw
