@@ -1,2 +1,2 @@
-sr mininova simpsons
+mininova simpsons
 Search results for simpsons
