@@ -1,2 +1,2 @@
-sr youtube simpsons
+youtube simpsons
 Simpsons
